# cpp_demos

./: .clang-format  .cmake-format.py  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  fetch.cmake  workspace.code-workspace
backward_cpp/: CMakeLists.txt  backward.cpp
boost_variant/: CMakeLists.txt  boost_variant.cpp
call_before_main/: CMakeLists.txt  lib_a.cpp  lib_b.cpp
canproto/: README.md
enum/: CMakeLists.txt  enum.cpp
fmt/: CMakeLists.txt  main.cpp
fstream/: CMakeLists.txt  fstream.cpp
glibc_version/: CMakeLists.txt  glibc_version.cpp
glog/: CMakeLists.txt  glog.cpp
protobuf/: CMakeLists.txt  README.md  message.proto
protobuf_grpc/: CMakeLists.txt  protobuf.cpp
python3/: CMakeLists.txt  py3.cpp
spdlog/: CMakeLists.txt  spdlog.cpp
standalone_projects/lcov_cpp_demo/: CMakeLists.txt  main.cpp
standalone_projects/lcov_cpp_demo/scripts/: coverage.sh
standalone_projects/lcov_pybind_demo/: CMakeLists.txt  README.md  lib.cpp  test.py
standalone_projects/obj_register_shared_lib/: CMakeLists.txt  main.cpp
standalone_projects/obj_register_shared_lib/include/: lib.h
standalone_projects/obj_register_shared_lib/src/: func.cpp  lib.cpp
standalone_projects/obj_register_static_lib/: CMakeLists.txt  main.cpp  use_func.h
standalone_projects/obj_register_static_lib/include/: lib.h
standalone_projects/obj_register_static_lib/src/: func.cpp  lib.cpp
standalone_projects/riscv_gdb/: CMakeLists.txt  README.md  hello.cpp  rm.sh  ubuntu.sh
systemc/: CMakeLists.txt  readme.txt
variadic_template/: CMakeLists.txt  variadic_template.cpp
